👷 Remove Apple notarization I've a lot of issues with notarization. I will temporary disable it

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,8 +21,8 @@ builds:
     goos:
       - darwin
 
-    hooks:
-      post: ['doppler run --command="bash scripts/notarise.sh {{ .Path }}" ']
+    #hooks:
+    #  post: ['doppler run --command="bash scripts/notarise.sh {{ .Path }}" ']
 
 project_name: gut
 
