💚 Fix build scoop package (#30)
* 👷 Add scoop packages

* 💚 Fix scoop build by setting draft to false

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -83,21 +83,20 @@ brews:
     dependencies:
       - git
 
-#scoop:
-#  bucket:
-#    owner: julien040
-#    name: gut-scoop
-#  homepage: https://gut-cli.dev
-#  description: Gut is an easy to use Git client for the command line.
-#  license: MIT
-#  depends:
-#    - "git"
+scoop:
+  bucket:
+    owner: julien040
+    name: gut-scoop
+  homepage: https://gut-cli.dev
+  description: Gut is an easy to use Git client for the command line.
+  license: MIT
+
 
 release:
   github:
     owner: julien040
     name: gut
-  draft: true
+  draft: false
   prerelease: auto
 
 archives:
